# xdg-desktop-portal-gtk4

./: .gitignore  BUILD.md  Cargo.toml  README.md  TESTING.md  TESTING_PORTAL.md  build.nix  flake.nix  meson.build  test_print.rs
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
contrib/: PKGBUILD  build.nix
data/: gtk4.portal
locales/: be.yml  bg.yml  ca.yml  cs.yml  da.yml  de.yml  en.yml  es.yml  fr.yml  gl.yml  he.yml  hi.yml  hr.yml  hu.yml  id.yml  ie.yml  it.yml  ja.yml  ka.yml  lt.yml  nl.yml  oc.yml  pl.yml  pt.yml  ro.yml  ru.yml  sk.yml  sl.yml  sr.yml  sv.yml  tr.yml  uk.yml  zh.yml
src/: cli.rs  gui.rs  lib.rs  main.rs  portal.rs  utils.rs
src/core/: mod.rs  request.rs  response.rs  session.rs  session_manager.rs
src/gui/: access.rs  account.rs  app_chooser.rs  dialog.rs  dynamic_launcher.rs  error.rs  file_chooser.rs  mod.rs  print.rs  ui.rs  usb.rs
src/gui/windowing/: external_window.rs  mod.rs  wayland.rs  window_identifier.rs  x11.rs
src/portal/: portals.rs  request.rs  response.rs  session.rs
src/portal/portals/: access.rs  account.rs  app_chooser.rs  dynamic_launcher.rs  email.rs  file_chooser.rs  inhibit.rs  lockdown.rs  notification.rs  print.rs  settings.rs  usb.rs
src/portals/: mod.rs
src/portals/access/: dbus.rs  gui.rs
src/portals/account/: dbus.rs  gui.rs
src/portals/app_chooser/: dbus.rs  gui.rs
src/portals/dynamic_launcher/: dbus.rs  gui.rs
src/portals/email/: dbus.rs
src/portals/file_chooser/: dbus.rs  gui.rs  mod.rs
src/portals/inhibit/: dbus.rs
src/portals/lockdown/: dbus.rs
src/portals/notification/: dbus.rs
src/portals/print/: dbus.rs  gui.rs
src/portals/settings/: dbus.rs
src/portals/usb/: dbus.rs  gui.rs  mod.rs
src/utils/: external_window.rs  file_chooser_ext.rs
tests/: dbus_portals_test.rs
