[package]
name = "xdg-desktop-portal-gtk4"
version = "1.3.1"
edition = "2024"
publish = false

[package.metadata.i18n]
available-locales = [
  "en",
  "be",
  "ca",
  "cs",
  "da",
  "de",
  "es",
  "fr",
  "gl",
  "he",
  "hi",
  "hr",
  "hu",
  "id",
  "ie",
  "it",
  "ja",
  "ka",
  "lt",
  "nl",
  "oc",
  "pl",
  "pt",
  "ru",
  "sk",
  "sl",
  "sr",
  "sv",
  "tr",
  "uk",
  "zh",
]
default-locale = "en"
load-path = "locales"

[dependencies]
anyhow = "1.0.103"
async-channel = "2.5.0"
bstr = "1.13.0"
clap = { version = "4.6.2", features = ["derive"] }
current_locale = "0.1.1"
env_logger = "0.11.11"
futures-util = "0.3.32"
gdk-pixbuf = "0.22.0"
gdk4-wayland = "0.11.4"
gdk4-x11 = { version = "0.11.4", features = ["xlib"] }
gtk4 = "0.11.4"
language-tags = "0.3.2"
libc = "0.2.186"
log = "0.4.33"
rand = "0.10.2"
rust-i18n = "4.2.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
x11 = { version = "2.21", features = ["xlib"] }
zbus = { version = "5.17.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
